
2.00  2015-02-21T11:23:00
	- Add github repo https://github.com/ronsavage/Set-FA.
	- Switch from Hash::FieldHash to Moo. This means no more method chaining.
	- Switch from Test::More to Test::Stream.
	- Add repo to Makefile.PL and docs.
	- Update pre-reqs in Makefie.PL.
	- Move t/pod.t into xt/author/.
	- Add Set::FA::Element.maxlevel() and Set::FA::Element.minlevel().
	- Remove Set::FA::Element.verbose().
	- Set default logger to Log::Handler. Also, re-write log() so that default messages no longer
		have the prefix of "$level: ".
	- Add 'use strict;' and 'use warnings;' to t/*.t.
	- Extract Set::FA's synopsis as scripts/synopsis.1.pl and Set::FA::Element's as
		scripts/synopsis.2.pl.
	- Delete Build.PL.
	- Update MANIFEST.
	- Update MANIFEST.SKIP.
	- Rename CHANGES to Changes as per CPAN::Spec::Changes
	- Reformat dates in this file from 'Sun Jul 17 12:40:00 2011' to '2011-07-17T12:40:00'.
	- Reformat *.pm and this file to have lines no more than 100 chars wide.

1.08  2011-07-17T12:40:00
	- Document the Set::FA::Element::report() method. Patch t/report.t to match.

1.07  2011-06-29T11:55:00
	- No code changes.
	- Update the docs to properly reflect the change to the log() method done in V 1.06.

1.06  2011-06-27T11:50:00
	- When stuck in a loop, log the next 5 chars - if any - in hex before dying.
	- Change the log() method in Set::FA::Element to always call die when level is 'error', and
		not just when there is no logger. This allows us to pass in a logger and get (debug) output
		even when the code dies.

1.05  2011-06-23T13:48:00
	- Change the type of the log message (Stepped from old_state to new_state...) in step_state()
		from warning to info. This transition is just a statement of fact, not something that you
		need to be warned about.
	- Change the log() method in Set::FA::Element. It used to call
		$self -> logger -> log($level => $message),
		and now calls $self -> logger -> $level($message). I feel the original way was a mistake,