@@ -8,6 +8,7 @@ Revision history for Perl extension Set::FA.
 	- Update pre-reqs in Makefie.PL.
 	- Move t/pod.t into xt/author/.
 	- Add Set::FA::Element.maxlevel() and Set::FA::Element.minlevel().
+	- Remove Set::FA::Element.clone().
 	- Remove Set::FA::Element.verbose().
 	- Set default logger to Log::Handler. Also, re-write log() so that default messages no longer
 		have the prefix of "$level: ".
